# rustlike

./: .clang-format  README.md  meson.build
include/rustlike/: flavor.h  mem.h  result.h  sentinelresult.h  stdint.h
proposals/: destructive move.md
test/: mem.cpp  result.cpp  sentinelresult.cpp  stdint.cpp
